--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
   <!DOCTYPE html>
   <html lang="en">
     <head> 
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>My Portfolio</title>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
       <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -147,18 +148,18 @@
             If you are interested in me and wanna contact me, here are my socials.
           </p>
           <div class="icons">
-              <a href="https://www.facebook.com/dipika.ghimire.96" target="_blank" style="color: rgb(0, 0, 0);">
+              <a href="https://www.facebook.com/dipika.ghimire.96" target="_blank" style="color: rgb(0, 0, 0); padding: 3px;">
               <i class="fa-brands fa-facebook fa-2xl"></i></a>
-              <a href="https://www.instagram.com/dipika_ghimire/" target="_blank" style="color: rgb(0, 0, 0);">
+              <a href="https://www.instagram.com/dipika_ghimire/" target="_blank" style="color: rgb(0, 0, 0); padding: 3px;">
               <i class="fa-brands fa-instagram fa-2xl" ></i></a>
-              <a href="https://www.linkedin.com/in/dipika-ghimire-870a4025b/" target="_blank" style="color: rgb(0, 0, 0);">
+              <a href="https://www.linkedin.com/in/dipika-ghimire-870a4025b/" target="_blank" style="color: rgb(0, 0, 0); padding: 3px;">
               <i class="fa-brands fa-linkedin fa-2xl"></i></a>
               
           </div>
         </section>
       
           <footer>
-              <p>Copyright 2021 My Portfolio</p>
+              <p style="font-size: 10px;">Copyright 2021 My Portfolio</p>
           </footer>
       </main>
       <script>
